--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <header>
-        <!-- logo -->
-        <a><span>WEB</span>STUDIO</a>
-        <!-- navigation -->
         <nav>
+            <!-- logo and navigation-->
+            <a href=""><span>WEB</span>STUDIO</a>
+            <!-- links -->
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
