--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         </section>
         <!-- values and advantages of the company -->
         <section>
+            <!-- h2 will be hidden with css -->
+            <h2>values</h2> 
             <ul>
                 <li>
                     <h3>Strategy</h3> 
