--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <!-- logo and navigation-->
-            <a href=""><span>WEB</span>STUDIO</a>
+            <a href="./index.html">WebStudio</a>
             <!-- links -->
             <ul>
                 <li><a href="">Studio</a></li>
@@ -18,10 +18,11 @@
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
-        <!-- email and tel -->
         <address>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul>
         </address>
     </header>
     <main>
@@ -62,13 +63,13 @@
             <h2>What are we doing</h2>
             <ul>
                 <li>
-                    <img src="images/wawd1.jpg" alt="desktop app image" width="360">
+                    <img src="./images/wawd1.jpg" alt="desktop app image" width="360">
                 </li>
                 <li>
-                    <img src="images/wawd2.jpg" alt="mobile app image" width="360">
+                    <img src="./images/wawd2.jpg" alt="mobile app image" width="360">
                 </li>
                 <li>
-                    <img src="images/wawd3.jpg" alt="lptop and mobile app" width="360">
+                    <img src="./images/wawd3.jpg" alt="lptop and mobile app" width="360">
                 </li>
             </ul>
         </section>
@@ -82,17 +83,17 @@
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="images/team2.jpg" alt="teammember" width="264">
+                    <img src="./images/team2.jpg" alt="teammember" width="264">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="images/team3.jpg" alt="teammember" width="264">
+                    <img src="./images/team3.jpg" alt="teammember" width="264">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="images/team4.jpg" alt="teammember" width="264">
+                    <img src="./images/team4.jpg" alt="teammember" width="264">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
@@ -101,7 +102,7 @@
     </main>
     <footer>
         <!-- logo -->
-        <a><span>WEB</span>STUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
